Now opencv 3.4 uses libjpeg-turbo for much faster image loading, along with some bug fix in the image

--- a/pytorch-dev/Dockerfile
+++ b/pytorch-dev/Dockerfile
@@ -1,4 +1,4 @@
-FROM pkdogcom/pytorch
+FROM pkdogcom/pytorch:0.4.1-py3
 LABEL maintainer pkdogcom@gmail.com
 
 # Install visualization tools and the libraries for pycharm
